# alchemist

./: Makefile  README.md  lib.typ  typst.toml
.github/workflows/: run-tests.yml
doc/: manual.typ
src/: drawer.typ
src/elements/chem/: chem.typ  chem.wasm  coordgen.wasm  decorations.typ  labels.typ  render.typ  skeleton.typ
src/elements/chem/coordgen/: build.sh  cg_plugin.cpp
src/elements/chem/engine/: Cargo.toml  graph.rs  lib.rs  output.rs
src/elements/chem/engine/front/: dsl.rs  mod.rs  smiles.rs
src/elements/chem/engine/layout/: mod.rs  orient.rs  rings.rs  stereo.rs
src/elements/molecule/: generator.typ  iupac-angle.typ  molecule.typ  parser.typ  transformer.typ
tests/README-graphic2/: test.typ
tests/arrows/: test.typ
tests/bounds-after-operator/: test.typ
tests/cetz-skeleton-anchors/: test.typ
tests/charges-center/: test.typ
tests/chem-compose/: test.typ
tests/chem-gallery/: test.typ
tests/chem-layout/: test.typ
tests/chem-parse/: test.typ
tests/chem-render/: test.typ
tests/cycles-aromatic-arc/: test.typ
tests/empty-fragments/: test.typ
tests/hide/: test.typ
tests/issue_32/: test.typ
tests/lewis/: test.typ
tests/links/: test.typ
tests/links-named/: test.typ
tests/molecule-edge-cases/: test.typ
tests/molecule-integration/: test.typ
tests/molecule-ring/: test.typ
tests/resonance/: test.typ
tests/touying/: test.typ
tests/touying-cetz-draw-commands/: test.typ
