[package]
name = "alchemist-chem-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# Crate root sits at engine/lib.rs (no redundant inner src/ directory).
path = "lib.rs"

[dependencies]
# Typst WASM plugin protocol macros
wasm-minimal-protocol = "0.2"
# JSON I/O with Typst
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
